// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardComponent should match snapshot 1`] = `
<babdev-card
  withHover={[Function Boolean]}
>
  <mat-card />
</babdev-card>
`;

exports[`CardComponent should match snapshot 2`] = `
<babdev-card
  withHover="false"
>
  <mat-card />
</babdev-card>
`;
